--- a/Multiple Live Graph with Gauge/templates/index.html
+++ b/Multiple Live Graph with Gauge/templates/index.html
@@ -123,7 +123,7 @@
 
         $(document).ready(function()
         {
-            // --------------Chart 1 ----------------------------
+            // -------------- Chart 1 Begins -----------------
             chartTemperatue = new Highcharts.Chart({
                 chart:
                     {
@@ -157,8 +157,9 @@
                     data: []
                 }]
             });
-            // --------------Chart 1 Ends - -----------------
+            // -------------- Chart 1 Ends -------------------
 
+            // -------------- Chart 2 Begins -----------------
             chartHumidity = new Highcharts.Chart({
                 chart:
                     {
@@ -191,6 +192,7 @@
                     data: []
                 }]
             });
+            // -------------- Chart 1 Ends -------------------
         });
 
     </script>
