--- a/Multiple Live Graph with Gauge/templates/index.html
+++ b/Multiple Live Graph with Gauge/templates/index.html
@@ -89,7 +89,7 @@
             {
                 // Temperature
                 var seriesTemperature = chartTemperatue.series[0],
-                    shiftTemperature = seriesTemperature.data.length > 20;
+                    shiftTemperature = seriesTemperature.data.length > 20; //Temperatue typo should be fixed eventually.
 
                 // Humidity
                 var seriesHumidity = chartHumidity.series[0],
