--- a/Growbot Sensor Data Testing/templates/index.html
+++ b/Growbot Sensor Data Testing/templates/index.html
@@ -234,7 +234,7 @@
         }
     }
 
-    const imgUrl = 'https://media3.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif'
+    const imgUrl = 'https://media0.giphy.com/media/ZZweDJbmPPLYiwQuf9/giphy.gif?cid=790b76119355ce528cec4b431d02f98003b6da3296c8960b&rid=giphy.gif'
     const size = "50";
     var obj = new Image(imgUrl, size);
     obj.backgroundImage();
